fix: fix page container overflow

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,14 +4,15 @@ body {
 
     .page {
         background-image: linear-gradient(to bottom right, purple, darkblue);
-        height: 100vh;
+        min-height: 100vh;
+        height: min-content;
         padding: 5em;
         text-align: center;
 
 
         .title {
             margin: 0;
-            font-size: 3.5em;
+            font-size: 2em;
             -webkit-text-stroke-width: 0.02em;
             -webkit-text-stroke-color: white;
             position: sticky;
